--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     Background-color: var(--highlight-color);
-    font-family: :var(--primary-font);
+    font-family: var(--primary-font);
 }
 
 :root {
